--- a/package.json
+++ b/package.json
@@ -1,30 +1,32 @@
 {
-  "name": "akazwz.com",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "react-router build",
-    "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
-  },
-  "dependencies": {
-    "@react-router/node": "^7.6.2",
-    "@react-router/serve": "^7.6.2",
-    "isbot": "^5.1.28",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-router": "^7.6.2"
-  },
-  "devDependencies": {
-    "@react-router/dev": "^7.6.2",
-    "@tailwindcss/vite": "^4.1.10",
-    "@types/node": "^24.0.1",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "tailwindcss": "^4.1.10",
-    "typescript": "^5.8.3",
-    "vite": "^6.3.5",
-    "vite-tsconfig-paths": "^5.1.4"
-  }
+	"name": "akazwz.com",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"build": "react-router build",
+		"dev": "react-router dev",
+		"start": "react-router-serve ./build/server/index.js",
+		"typecheck": "react-router typegen && tsc",
+		"format": "biome format --write"
+	},
+	"dependencies": {
+		"@react-router/node": "^7.6.2",
+		"@react-router/serve": "^7.6.2",
+		"isbot": "^5.1.28",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
+		"react-router": "^7.6.2"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^1.9.4",
+		"@react-router/dev": "^7.6.2",
+		"@tailwindcss/vite": "^4.1.10",
+		"@types/node": "^24.0.1",
+		"@types/react": "^19.1.8",
+		"@types/react-dom": "^19.1.6",
+		"tailwindcss": "^4.1.10",
+		"typescript": "^5.8.3",
+		"vite": "^6.3.5",
+		"vite-tsconfig-paths": "^5.1.4"
+	}
 }
