--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -14,7 +14,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: akazwzdotcom
+                name: akazwzdotcom-service
                 port:
                   number: 80
   tls:
